--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,13 @@
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" />
   <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
   <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
-  <link rel="stylesheet" href="static/index.css">
+  <link rel="stylesheet" href="static/css/index.css">
   <script>
     $(function () {
       $("#forDate").datepicker();
     });
   </script>
-  <script src="app.js" defer></script>
+  <script src="../static/js/app.js" defer></script>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <nav>
       <input type="text" placeholder="Search">
       <div class="avatar">
-        <a href="login"><img src="static/images.png" alt=""></a>
+        <a href="login"><img src="static/assets/images.png" alt=""></a>
       </div>
     </nav>
   </header>
@@ -38,8 +38,9 @@
   {% endblock %}
 
 <footer>
-  <p>&COPY; Copyright <span id="year">Date</span></p>
+  <p>© 2023 ALX Portfolio Project. All rights reserved<a href="https://seajro.com/" target="#"></a></p>
 </footer>
+
 </body>
 
 </html>
