--- a/templates/register.html
+++ b/templates/register.html
@@ -11,28 +11,32 @@
 {% endblock %}
 
 {% block content %}
+<!-- main -->
 <div class="main-w3layouts wrapper">
-  <h1>Login</h1>
+  <h1>Sign Up</h1>
   <div class="main-agileinfo">
     <div class="agileits-top">
 
       <!-- This is the begining of the registration form labels -->
       <form action="#" method="post">
+        <input class="text" type="text" name="first_name" placeholder="First Name" required="">
+        <input class="lastname" type="text" name="last_name" placeholder="Last Name" required="">
         <input class="text email" type="email" name="email" placeholder="Email" required="">
         <input class="text" type="password" name="password" placeholder="Password" required="">
+        <input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">
 
         <div class="wthree-text">
           <label class="anim">
             <input type="checkbox" class="checkbox" required="">
-            <span>Remember me</span>
+            <span>I Agree To The Terms & Conditions</span>
           </label>
         </div>
 
-        <input type="submit" value="LOGIN">
+        <input type="submit" value="SIGN UP">
       </form>
       <!-- This is the end of the registration form -->
 
-      <p>Don't have an Account? <a href="register">Create Account</a></p>
+      <p>Already have an Account? <a href="login">Login</a></p>
     </div>
   </div>
 
