--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" />
   <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
   <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
-  <link rel="stylesheet" href="static/css/index.css">
+  <link rel="stylesheet" href="/static/css/index.css">
   <script>
     $(function () {
       $("#forDate").datepicker();
@@ -28,7 +28,7 @@
     <nav>
       <input type="text" placeholder="Search">
       <div class="avatar">
-        <a href="login"><img src="static/assets/images.png" alt=""></a>
+        <a href="login"><img src="/static/assets/images.png" alt=""></a>
       </div>
     </nav>
   </header>
