--- a/templates/user.html
+++ b/templates/user.html
@@ -4,7 +4,7 @@
 {% block header %}
   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="static/css/user_style.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/user_style.css">
 {% endblock %}
 
 {% block content %}
