updated base html file.

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
 <footer>
   <p>© 2023 ALX Portfolio Project. All rights reserved<a href="https://seajro.com/" target="#"></a></p>
 </footer>
-
+<script src="../static/js/index.js" async></script>
 </body>
 
 </html>
