updated event card

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,8 +35,13 @@
             </div>
 
             <div class="calendarHolder">
-                <input type="text" id="forDate" placeholder="Pick a date">
-                <button class="btn-evt">Add an event</button>
+		<h3>Have you any important event/schedule?</h3>
+		<input type='text' name='title' placeholder='Event title' required><br>
+		<input type='text' name='country' placeholder='Event country' required><br>
+		<input type='text' name='state' placeholder='Event state' required><br>
+		<input type='text' name='city' placeholder='Event city' required><br>
+		<input type="text" name='date' id="forDate" placeholder="Pick a date"><br>
+		<input type='submit' class="btn-evt">
             </div>
         </div>
 
